--- a/templates/prebase.html
+++ b/templates/prebase.html
@@ -471,7 +471,8 @@
         height: auto;
       }
       .footer-about .logo img{
-        width: 300px;
+        width: 500px;
+        padding: 30px;
       }
     </style>
     
@@ -531,6 +532,5 @@
     <script src="{% static 'js/count-up.min.js' %}"></script>
     <script src="{% static 'js/particles.min.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
-    <script src="{% static 'js/logo_after.js' %}"></script>
   </body>
 </html>
